@@ -1,1 +1,0 @@
-Base user interface library for the Tegaki project.
