@@ -1,27 +1,0 @@
-@comment $NetBSD: PLIST,v 1.4 2022/01/14 17:51:58 wiz Exp $
-${PYSITELIB}/${EGG_INFODIR}
-${PYSITELIB}/tegakigtk/__init__.py
-${PYSITELIB}/tegakigtk/__init__.pyc
-${PYSITELIB}/tegakigtk/__init__.pyo
-${PYSITELIB}/tegakigtk/canvas.py
-${PYSITELIB}/tegakigtk/canvas.pyc
-${PYSITELIB}/tegakigtk/canvas.pyo
-${PYSITELIB}/tegakigtk/chartable.py
-${PYSITELIB}/tegakigtk/chartable.pyc
-${PYSITELIB}/tegakigtk/chartable.pyo
-${PYSITELIB}/tegakigtk/fakekey.py
-${PYSITELIB}/tegakigtk/fakekey.pyc
-${PYSITELIB}/tegakigtk/fakekey.pyo
-${PYSITELIB}/tegakigtk/iconview.py
-${PYSITELIB}/tegakigtk/iconview.pyc
-${PYSITELIB}/tegakigtk/iconview.pyo
-${PYSITELIB}/tegakigtk/osd.py
-${PYSITELIB}/tegakigtk/osd.pyc
-${PYSITELIB}/tegakigtk/osd.pyo
-${PYSITELIB}/tegakigtk/recognizer.py
-${PYSITELIB}/tegakigtk/recognizer.pyc
-${PYSITELIB}/tegakigtk/recognizer.pyo
-${PYSITELIB}/tegakigtk/renderers.py
-${PYSITELIB}/tegakigtk/renderers.pyc
-${PYSITELIB}/tegakigtk/renderers.pyo
-share/tegaki/icons/handwriting.png
